🧹 chore(app): chage quote and tab icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mudev</title>
 
-    <link rel="shortcut icon" href="./assets/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/tab-logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <h1>PORTFOLIO</h1>
+        <h1>Mudev</h1>
 
         <ul class="nav-menu">
             <li class="navitem"><a href=".hero" class="active">Home</a></li>
@@ -30,7 +30,7 @@
             <li><span class="line-span-nav"></span></li>
             <li id="theme-toggle">
                 <img src="./assets/light.svg" alt="light mode" id="theme-icon">
-            </li>            
+            </li>
         </ul>
     </nav>
 
@@ -52,7 +52,7 @@
                 <p>Line Developer & AI developer</p>
 
                 <div class="quote">
-                    <h3>"Better Together"</h3>
+                    <a href="https://drive.google.com/file/d/1EUzDxtphLqWc12WTOeErF1FswBk91vkL/view"><h3>"👉🏻 Please click to see my portfolio!"</h3></a>
                 </div>
             </div>
         </div>
