📚 docs(shared): add facebook baner

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,700;1,9..40,500&family=Kanit:wght@200;300;400;500&display=swap"
         rel="stylesheet">
+
+    <!-- add social media banner -->
+    <meta property="og:image" content="https://mudev-portfolio.web.app/https://i.ibb.co/4Z9GRN6/Mac-Book-Pro-1718021991448.jpg">
 </head>
 
 <body>
