✨ feat(app): Add Experieces Section

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,700;1,9..40,500&family=Kanit:wght@200;300;400;500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,700;1,9..40,500&family=Kanit:wght@200;300;400;500&display=swap"
         rel="stylesheet">
 
     <!-- add social media banner -->
@@ -134,6 +134,15 @@
                     <p class="grade">1st year - Now</p>
                 </div>
             </div>
+        </div>
+
+        <!-- Experiences -->
+        <div class="experiences" id="experiences">
+            <h2>Experiences</h2>
+            <p>Click card to see info.</p>
+            <div class="exp-box" id="exp-box">
+            </div>
+            <button class="see-more" id="see-more">See More</button>
         </div>
 
         <!-- My Skills -->
@@ -262,6 +271,7 @@
     </div>
 
     <script src="./script.js"></script>
+    <script src="./exp-manager.js"></script>
 
 </body>
 
